# ML_WorkFlow_Playground

./: .gitignore  LinearRegression.ipynb  LinearRegression_for_AqarData.ipynb  README.md  breast_cancer_playground.ipynb  main.py  pyproject.toml
notebooks/: LinearRegression_for_AqarData.ipynb  exam-score-playground.ipynb  penguins-playground.ipynb  titanic-playground.ipynb
src/: __init__.py  display.py  metrics.py  model_selection.py  models.py
